# CasIDM

./: .gitignore  README.md  setup.cfg
scripts/01_hybrid_mceq/: 01_hybrid_mceq.ipynb
scripts/examples/01_hybrid_mceq/: 01_hybrid_mceq.ipynb
src/casidm/cascade/: cascade_analysis.py  cascade_driver.py  cascade_driver_debug.py
src/casidm/data_structs/: particle_array.py  pdg_pid_map.py  property_maps.py
src/casidm/mceq_utils/: grid_collector.py  mceq_comparison.py
src/casidm/process/: decay_driver.py  hadron_inter.py
src/casidm/propagation/: decay_xdepth.py  particle_xdepths.py  tab_pproperties.py
src/casidm/propagation/interaction/: csec_on_table.py
src/casidm/propagation/slant_depth/: xdepth_on_table.py
src/casidm/utils/: utils.py
