[metadata]
name = casidm
version = 0.1.0
author = Anton Prosekin
author_email = ayprosekin@gmail.com
description = CasIDM - CAScade Initial Development Module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jncots/CasIDM
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    scipy
    particle

[options.packages.find]
where = src